Fix logo size and force text wrap

--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ a {
   flex: 1;
 }
 .nav-logo {
-  height: 2.2rem;
+  height: 4.2rem;
   width: auto;
   mix-blend-mode: screen;
 }
